refactor 조회 로직 및 DTO 코드 전반 리팩토링